--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,25 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@arcjet/node": "^1.0.0-alpha.34",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.1",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.9",
